# ArduinoBLE

./: .codespellrc  .editorconfig  .gitattributes  .gitignore  .travis.yml  CHANGELOG  README.md  keywords.txt  library.properties  patch0.patch
.github/workflows/: build-examples.yml  codespell.yml  compile-examples.yml  compile-for-esp.yaml  spell-check.yml  unit-tests.yml
docs/: api.md  readme.md
examples/Central/LedControl/: LedControl.ino
examples/Central/PeripheralExplorer/: PeripheralExplorer.ino
examples/Central/Scan/: Scan.ino
examples/Central/ScanCallback/: ScanCallback.ino
examples/Central/ScanCallbackInterleaved/: ScanCallbackInterleaved.ino
examples/Central/ScanInterleaved/: ScanInterleaved.ino
examples/Central/SensorTagButton/: SensorTagButton.ino
examples/Central/iBeaconExplorer/: iBeaconExplorer.ino
examples/Peripheral/Advertising/EnhancedAdvertising/: EnhancedAdvertising.ino
examples/Peripheral/Advertising/RawDataAdvertising/: RawDataAdvertising.ino
examples/Peripheral/BatteryMonitor/: BatteryMonitor.ino
examples/Peripheral/ButtonLED/: ButtonLED.ino
examples/Peripheral/CallbackLED/: CallbackLED.ino
examples/Peripheral/ClimateSensor/: ClimateSensor.ino
examples/Peripheral/EncryptedBatteryMonitor/: EncryptedBatteryMonitor.ino
examples/Peripheral/LED/: LED.ino
extras/: arduino-ble-parser-live.py  arduino-ble-parser.py
extras/STM32Cube_FW/: 0001-chore-adapt-STM32Cube_FW-sources.patch  0001-chore-clean-up-and-adapt-STM32Cube_FW-sources-for-ST.patch  0002-fix-include-a-timeout-when-waiting-for-the-cmd_resp.patch  0003-Added-support-for-custom-app_conf.h-35.patch  0003-Added-support-for-custom-app_conf.h.patch  0003-chore-add-support-for-customize-app_conf_default.h.patch  0004-Stub-OutputDbgTrace-function.patch  0004-fix-TL_Evt_t-payload-size-for-reset.patch  0004-fix-warning-outside-array-bounds.patch
extras/STM32_WPAN/: 0001-chore-adapt-STM32_WPAN-sources.patch  0002-fix-include-a-timeout-when-waiting-for-the-cmd_resp.patch  0003-chore-add-support-for-customize-app_conf_default.h.patch  0004-fix-TL_Evt_t-payload-size-for-reset.patch
extras/test/: .gitignore  CMakeLists.txt
extras/test/include/: Arduino.h
extras/test/include/test_advertising_data/: FakeBLELocalDevice.h
extras/test/include/test_discovered_device/: FakeGAP.h
extras/test/include/util/: Common.h  HCIFakeTransport.h  Stream.h  String.h
extras/test/src/: Arduino.cpp  test_main.cpp
extras/test/src/test_advertising_data/: FakeBLELocalDevice.cpp  test_advertising_data.cpp  test_local_name.cpp  test_manufacturer.cpp  test_service.cpp
extras/test/src/test_characteristic/: test_permissions.cpp  test_writeValue.cpp
extras/test/src/test_discovered_device/: FakeGAP.cpp  test_discovered_device.cpp
extras/test/src/test_uuid/: test_uuid.cpp
extras/test/src/util/: Common.cpp  HCIFakeTransport.cpp  String.cpp  TestUtil.cpp  itoa.c
src/: ArduinoBLE.h  BLEAdvertisingData.cpp  BLEAdvertisingData.h  BLEAttribute.cpp  BLEAttribute.h  BLECharacteristic.cpp  BLECharacteristic.h  BLEDescriptor.cpp  BLEDescriptor.h  BLEDevice.cpp  BLEDevice.h  BLEProperty.h  BLEService.cpp  BLEService.h  BLEStringCharacteristic.cpp  BLEStringCharacteristic.h  BLETypedCharacteristic.h  BLETypedCharacteristics.cpp  BLETypedCharacteristics.h  BLEUuid.cpp  BLEUuid.h  STM32duinoBLE.h
src/definitions/: BLEDefinitions.h  BLEFormatTypes.h
src/local/: BLELocalAttribute.cpp  BLELocalAttribute.h  BLELocalCharacteristic.cpp  BLELocalCharacteristic.h  BLELocalDescriptor.cpp  BLELocalDescriptor.h  BLELocalDevice.cpp  BLELocalDevice.h  BLELocalService.cpp  BLELocalService.h
src/remote/: BLERemoteAttribute.cpp  BLERemoteAttribute.h  BLERemoteCharacteristic.cpp  BLERemoteCharacteristic.h  BLERemoteDescriptor.cpp  BLERemoteDevice.cpp  BLERemoteDevice.h  BLERemoteService.cpp  BLERemoteService.h
src/utility/: ATT.cpp  ATT.h  BLELinkedList.h  BLEManufacturerData.cpp  BLEManufacturerData.h  BLEServiceData.cpp  BLEServiceData.h  BLEUuid.cpp  BLEUuid.h  GAP.cpp  GAP.h  GATT.cpp  GATT.h  HCI.cpp  HCI.h  HCICordioTransport.cpp  HCICordioTransport.h  HCINinaSpiTransport.cpp  HCINinaSpiTransport.h  HCISharedMemTransport.cpp  HCISharedMemTransport.h  HCISpiTransport.cpp  HCISpiTransport.h  HCITransport.h  HCIUartTransport.cpp  HCIUartTransport.h  HCIVirtualTransport.cpp  HCIVirtualTransport.h  HCIVirtualTransportAT.cpp  HCIVirtualTransportAT.h  HCIVirtualTransportRPC.cpp  HCIVirtualTransportRPC.h  HCIVirtualTransportZephyr.cpp  HCIVirtualTransportZephyr.h  HCIVirtualZephyrMacros.c  L2CAPSignaling.cpp  L2CAPSignaling.h  ble_drv.cpp  ble_drv.h  ble_spi.h  (+3 more)
src/utility/STM32Cube_FW/: README.md  app_conf.h  app_conf_default.h  ble_bufsize.h  hw.h  hw_ipcc.c  mbox_def.h  shci.c  shci.h  shci_tl.c  shci_tl.h  stm32_wpan_common.h  stm_list.c  stm_list.h  tl.h  tl_dbg_conf.h  tl_mbox.c
src/utility/STM32_WPAN/: LICENSE.md  README.md  app_conf.h  app_conf_default.h  ble_bufsize.h  hw.h  hw_ipcc.c  shci.c  shci.h  shci_tl.c  shci_tl.h  stm32_wpan_common.h  stm_list.c  tl.h  tl_mbox.c  utilities_conf.h
